# ZPE-Robotics

./: .gitignore  .yamllint  .zenodo.json  AUDITOR_PLAYBOOK.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOVER_2026-04-25_WAVE_1_5B.md  Makefile  OPERATOR_RUNBOOK.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASE_CANDIDATE.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: arm64_parity_probe.yml  ci.yml  clean_clone_verify.yml  e_g3_comparator.yml  it03_it05_composition.yml  it04_parity_matrix.yml  m1_ros2_probe.yml  publish.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  AUDITOR_PLAYBOOK.md  CLAIM_BOUNDARY.md  DOC_REGISTRY.md  FAQ.md  LEGAL_BOUNDARIES.md  MECHANICS_LAYER.md  OPERATOR_RUNBOOK.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASE_CANDIDATE.md  SUPPORT.md  ZPBOT_V2_AUTHORITY_SURFACE.md  market_surface.json
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/family/: ROBOTICS_RELEASE_LINKAGE.md
examples/: README.md  lerobot_compress.py  mcap_bridge.py  rosbag_bridge.py
legacy_packages/zpe-motion-kernel/: README.md  pyproject.toml
legacy_packages/zpe-motion-kernel/src/zpe_motion_kernel/: __init__.py
proofs/: CONSOLIDATED_PROOF_REPORT.md  ENGINEERING_BLOCKERS.md  FINAL_STATUS.md  PHASE9_EVIDENCE_MANIFEST.json  README_LINEAGE_PATHS.md
proofs/comm03/: COMM03_AUDIT_REPLAY_BUNDLE.md  comm03_corruption_matrix.json  comm03_mac_audit_result.json  comm03_provenance_manifest.json  comm03_redmagic_device_result.json
proofs/enterprise_benchmark/: EVIDENCE_MANIFEST.json  GATE_VERDICTS.json  benchmark_result.json  dataset_provenance.json
proofs/imc_audit/: imc_architecture_audit.json  imc_architecture_audit.sha256
proofs/logs/: PRE_REPO_AUTHORITY_SNAPSHOT_2026-03-09.md
proofs/narrow_claim/: NARROW_CLAIM_GATE.json  NARROW_CLAIM_RATIFICATION.md
proofs/red_team/: red_team_report.json
proofs/refinement/: phase08_baseline_perf.json
proofs/release_candidate/: anomaly_detection_result.json  anomaly_reconciliation_result.json  anomaly_threshold_sweep.json  arm64_parity_result.json  canonical_release_packet.zpbot  clean_clone_result.json  e_g3_comparator_result.json  lerobot_codec_result.json  m1_ros2_probe_result.json  primitive_search_result.json
proofs/runbooks/: 20260321_docs_alignment_execution_plan.md  README.md  REPO_TECHNICAL_ALIGNMENT_EXECUTION_PROMPT.md  REPO_TECHNICAL_ALIGNMENT_PLAN.md  REPO_TECHNICAL_EXECUTION_SUPPLEMENT.md  RUNBOOK_GATE_ARM64_PARITY_GITHUB_ACTIONS.md  RUNBOOK_GATE_A_RESOURCE_LOCK.md  RUNBOOK_GATE_B_CODEC_BASELINES.md  RUNBOOK_GATE_COMM03_AUDIT_BUNDLE.md  RUNBOOK_GATE_COMM03_REDMAGIC_AUDIT.md  RUNBOOK_GATE_C_INTEGRATION_CHECKS.md  RUNBOOK_GATE_D_FALSIFICATION_DETERMINISM.md  RUNBOOK_GATE_E_G3_COMPARATOR.md  RUNBOOK_GATE_E_NET_NEW_INGESTION.md  RUNBOOK_GATE_E_PACKAGING_CLAIMS.md  RUNBOOK_GATE_IT01_V2_FORMALIZATION.md  RUNBOOK_GATE_IT02_NATIVE_BRIDGE.md  RUNBOOK_GATE_M1_GITHUB_ACTIONS.md  RUNBOOK_GATE_M1_M4_MAXIMALIZATION.md  RUNBOOK_GATE_REDMAGIC_ADB_VALIDATION.md  RUNBOOK_PHASE08_REFINEMENT_BASELINE.md  RUNBOOK_ZPE_ROBOTICS_MASTER.md  TECHNICAL_RELEASE_SURFACE.md  TRUSTED_PUBLISHING_OPERATOR_STEPS.md  ZER0PA_REPO_DOCS_PLAYBOOK_CANONICAL_2026-03-21.md
scripts/: acquire_enterprise_dataset.py  arm64_parity_probe.py  benchmark_phase8_core_paths.py  clean_clone_verify.py  e_g3_comparator.py  enterprise_benchmark.py  it03_it05_composition.py  it04_parity_probe.py  lerobot_benchmark_sweep.py  m1_ros2_probe.py  mujoco_parity_probe.py  net_new_ingest.py  phase6_release_evidence.py  red_team_phase9.py  regression_pack.py  ros2_bridge_probe.py  rosbag_demo_benchmark.py  run_wave1.py  validate_net_new.py
src/zpe_robotics/: __init__.py  anomaly.py  audit_bundle.py  benchmark_sweep.py  cli.py  codec.py  constants.py  determinism.py  enterprise_dataset.py  falsification.py  fixtures.py  kinematics.py  lerobot_codec.py  mcap_bridge.py  primitive_index.py  primitives.py  release_candidate.py  rosbag_adapter.py  runtime_probe.py  telemetry.py  utils.py  vla_bridge.py  vla_eval.py  wire.py
tests/: test_anomaly.py  test_audit_bundle.py  test_benchmarks_doc.py  test_claim_boundary.py  test_clean_install.py  test_cli.py  test_codec.py  test_enterprise_dataset.py  test_examples.py  test_lerobot_codec.py  test_mcap_bridge.py  test_mcap_native_bridge.py  test_primitive_index.py  test_real_lerobot_roundtrip.py  test_release_candidate.py  test_release_surface.py  test_rosbag_adapter.py  test_rosbag_demo_benchmark.py  test_vla_bridge.py  test_vla_eval.py  test_wire.py
(+102 files in other folders)
