[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-robotics"
version = "0.1.0"
description = "Deterministic motion utility kernel for frozen wire-v1 robotics transport and replay."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Zer0pa"}]
license = "LicenseRef-Zer0pa-SAL-6.0"
dependencies = [
  "mcap>=1.3",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]
benchmark = [
  "datasets>=4.5.0",
  "h5py>=3",
  "huggingface-hub>=0.20",
  "lz4>=4",
  "pyarrow>=17",
  "zstandard>=0.23",
]
netnew = [
  "datasets>=4.5.0",
  "huggingface-hub>=0.20",
]
telemetry = [
  "comet-ml>=3",
  "opik>=1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[project.scripts]
zpe-robotics = "zpe_robotics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_robotics*"]
