[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-robotics"
version = "0.1.0"
description = "Deterministic motion utility kernel for frozen wire-v1 robotics transport and replay."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"}]
license = "LicenseRef-Zer0pa-SAL-7.0"
keywords = [
  "robotics",
  "motion-telemetry",
  "motion-compression",
  "rosbag",
  "mcap",
  "vla",
  "deterministic-replay",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "mcap>=1.3",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]
benchmark = [
  "datasets>=4.5.0",
  "h5py>=3",
  "huggingface-hub>=0.20",
  "lz4>=4",
  "pyarrow>=17",
  "zstandard>=0.23",
]
netnew = [
  "datasets>=4.5.0",
  "huggingface-hub>=0.20",
]
telemetry = [
  "comet-ml>=3",
  "opik>=1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[project.scripts]
zpe-robotics = "zpe_robotics.cli:main"

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Robotics"
Documentation = "https://github.com/Zer0pa/ZPE-Robotics#readme"
Repository = "https://github.com/Zer0pa/ZPE-Robotics"
Issues = "https://github.com/Zer0pa/ZPE-Robotics/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Robotics/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_robotics*"]
